task2 terminado-entregado

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,12 @@
 body{
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(219,0,104,1) 100%);
-    color: #ffffff;
-
+    color: hsl(0, 0%, 100%);
+}
+@media (min-width: 1400px){
+    .container{
+        max-width: 1400px;
+    }
 }
 
 /* Nav bar */
@@ -45,26 +49,28 @@ font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .btn-vermas:hover {
     background-color: #3a2cff;
 }
 .card, .card-event{
-    box-shadow: 1px 1px 5px 3px #3a2cff ; 
+    box-shadow: 1px 1px 2px 2px #3a2cff ; 
     color: black;
 }
-
+.card-img-container{
+    height: 300px;
+}
 .card-img-top {
-    overflow: hidden;
+    object-fit: cover;
+    height: 100%;
 }
 
 /* footer */
 footer{
     background: radial-gradient(circle, rgba(219,0,104,1) 100%);
     color: white;
-    position: sticky; 
-    margin-bottom: 0px;
 }
 
 /* Contact Form */
