contact form validando y alertando

--- a/styles/index.css
+++ b/styles/index.css
@@ -77,7 +77,9 @@ footer{
     max-width: 500px;
     margin-top: 50px;
 }
-
+.input-error{
+    border: red solid 3px;
+}
 /* Event details*/
 .cardevent {
     flex-direction: row !important; 
